--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="theme-color" content="#3182ce">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="mobile-web-app-capable" content="yes">
+
 </head>
 <body>
 
