--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="mobile-web-app-capable" content="yes">
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
 </head>
 <body>
 
@@ -51,10 +52,10 @@
                 <path fill="currentColor" d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.17-3.77-7.48-7.94-7.94V1h-2v2.06C6.83 3.52 3.52 6.83 3.06 11H1v2h2.06c.46 4.17 3.77 7.48 7.94 7.94V23h2v-2.06c4.17-.46 7.48-3.77 7.94-7.94H23v-2h-2.06zM12 19c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7z"/>
             </svg>
         </button>
-        
+
+
         <button id="btn-add-alagamento" class="floating-btn-add">
             <i class="fa-solid fa-location-dot"></i>
-            <span>+</span>
         </button>
 
         <aside id="status-panel" class="floating-panel">
@@ -64,17 +65,14 @@
             </div>
         </aside>
 
-        <button id="btn-previsao-3dias" class="floating-btn" onclick="abrirModalPrevisao()">
-            📅 <span>3 Dias</span>
-        </button>
-
         <div id="modal-previsao" class="modal-clima">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3>Previsão para São Luiz</h3>
-                    <button onclick="fecharModalPrevisao()">✕</button>
+                    <h3><i class="fa-solid fa-calendar-days"></i> Previsão 3 Dias</h3>
+                    <button class="btn-fechar-modal" onclick="fecharModalPrevisao()">✕</button>
                 </div>
-                <div class="dias-grid"></div>
+                <div class="dias-grid">
+                    </div>
             </div>
         </div>
 
