Ajustes de responsividade, aviso de segurança e seta animada na modal

--- a/login.html
+++ b/login.html
@@ -29,6 +29,10 @@
                 <div class="button-group">
                     <button type="submit" id="btnLogin" class="btn primary">Entrar</button>
                     <button type="button" id="btnCadastro" class="btn secondary">Criar Conta</button>
+                    
+                    <button type="button" id="btnAnonimo" class="btn link" style="width: 100%; margin-top: 10px; background: transparent; color: #666; border: 1px dashed #ccc;">
+                        Entrar sem cadastro (Uso rápido)
+                    </button>
                 </div>
                 
                 </form>
