Ajustes de responsividade, aviso de segurança e seta animada na modal

--- a/login.html
+++ b/login.html
@@ -15,7 +15,9 @@
     <main class="login-container">
         <section class="login-card">
             <header>
-                <div class="logo-icon">🌊</div>
+                <div class="logo-container">
+                    <img src="logo-512.png" alt="Logo Alaga-Help" class="logo-img">
+                </div>
                 <h1>Alaga-Help</h1>
                 <p>Monitore São Luiz do Paraitinga em tempo real</p>
             </header>
@@ -30,7 +32,7 @@
                     <button type="submit" id="btnLogin" class="btn primary">Entrar</button>
                     <button type="button" id="btnCadastro" class="btn secondary">Criar Conta</button>
                     
-                    <button type="button" id="btnAnonimo" class="btn link" style="width: 100%; margin-top: 10px; background: transparent; color: #666; border: 1px dashed #ccc;">
+                    <button type="button" id="btnAnonimo" class="btn link" style="width: 100%; margin-top: 10px; background: transparent; color: #666; border: 1px dashed #27a3e5;">
                         Entrar sem cadastro (Uso rápido)
                     </button>
                 </div>
