--- a/index.html
+++ b/index.html
@@ -187,6 +187,17 @@
         </div>
     </main>
 
+    <div id="overlay-pwa-sucesso" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: #3182ce; color: white; z-index: 9999; flex-direction: column; align-items: center; justify-content: center; text-align: center; padding: 20px; font-family: sans-serif;">
+        <div style="font-size: 80px; margin-bottom: 20px;">✅</div>
+        <h1 style="font-size: 2rem; margin-bottom: 15px;">INSTALADO COM SUCESSO!</h1>
+        <p style="font-size: 1.2rem; max-width: 300px; line-height: 1.5; margin-bottom: 30px;">
+            O Alaga-Help agora está na sua tela inicial como um Aplicativo.
+        </p>
+        <div style="background: rgba(255,255,255,0.2); padding: 15px; border-radius: 10px; font-weight: bold;">
+            SAIA DO NAVEGADOR E ABRA O APP PELO ÍCONE.
+        </div>
+    </div>
+
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
     <script type="module" src="script.js"></script>
 </body>
