--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
 
-    <div id="modal-aviso" class="modal-overlay">
+    <div id="modal-aviso" class="modal-overlay" style="display: none;">
         <div class="modal-aviso-content">
             <div class="modal-header-alerta">
                 <i class="fa-solid fa-triangle-exclamation"></i>
